<resources>
    <string name="app_name">CircleDialog</string>

    <string name="moments">朋友圈</string>
    <string name="wechat">微信好友</string>
    <string name="weibo">新浪微博</string>
    <string name="qq">QQ</string>
    <string name="qzone">QQ空间</string>
    <string name="share">分享</string>
    <string name="delete">删除</string>
    <string name="add_item">添加</string>
    <string name="source_on_github">Github位置</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
